--- a/vercel.json
+++ b/vercel.json
@@ -9,18 +9,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/app.js"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Content-Security-Policy",
-          "value": "script-src 'self' https://vercel.live"
-        }
-      ]
+      "dest": "app.js"
     }
   ]
 }
